--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "lint:scss": "stylelint \"src/**/*.scss\" --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "validate:18n": "node scripts/validate-i18n.js"
   },
   "prettier": {
     "printWidth": 100,
@@ -49,6 +50,7 @@
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
@@ -73,12 +75,13 @@
   "lint-staged": {
     "**/*.{ts,js}": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "**/*.{scss,css}": [
-      "stylelint --fix",
-      "git add"
+      "stylelint --fix"
+    ],
+    "public/i18n/*.json": [
+      "npm run validate:18n"
     ]
   }
 }
