feat: angular material installed, icon button atom, and partial layout of header organism

--- a/package.json
+++ b/package.json
@@ -1,75 +1,77 @@
 {
-	"name": "nvvt-backoffice",
-	"version": "0.0.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve --configuration development",
-		"start:prod": "ng serve --configuration production",
-		"build": "ng build --configuration production",
-		"watch": "ng build --watch --configuration development",
-		"test": "ng test",
-		"lint": "ng lint",
-		"lint:styles": "stylelint \"src/**/*.{scss,css}\" --fix",
-		"prepare": "husky install",
-		"validate:18n": "node scripts/validate-i18n.js"
-	},
-	"prettier": {
-		"printWidth": 100,
-		"singleQuote": true,
-		"overrides": [
-			{
-				"files": "*.html",
-				"options": {
-					"parser": "angular"
-				}
-			}
-		]
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/common": "^20.1.0",
-		"@angular/compiler": "^20.1.0",
-		"@angular/core": "^20.1.0",
-		"@angular/forms": "^20.1.0",
-		"@angular/platform-browser": "^20.1.0",
-		"@angular/router": "^20.1.0",
-		"@ngx-translate/core": "^17.0.0",
-		"@ngx-translate/http-loader": "^17.0.0",
-		"rxjs": "~7.8.0",
-		"tslib": "^2.3.0",
-		"zone.js": "~0.15.0"
-	},
-	"devDependencies": {
-		"@angular-eslint/builder": "20.1.1",
-		"@angular/build": "^20.1.6",
-		"@angular/cli": "^20.1.6",
-		"@angular/compiler-cli": "^20.1.0",
-		"@eslint/js": "^9.29.0",
-		"@types/jasmine": "~5.1.0",
-		"angular-eslint": "20.1.1",
-		"eslint": "^9.29.0",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-prettier": "^5.5.4",
-		"globals": "^16.3.0",
-		"husky": "^9.1.7",
-		"jasmine-core": "~5.8.0",
-		"karma": "~6.4.0",
-		"karma-chrome-launcher": "~3.2.0",
-		"karma-coverage": "~2.2.0",
-		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.1.0",
-		"lint-staged": "^16.1.5",
-		"prettier": "^3.6.2",
-		"stylelint": "^16.23.1",
-		"stylelint-config-standard-scss": "^15.0.1",
-		"stylelint-scss": "^6.12.1",
-		"typescript": "~5.8.2",
-		"typescript-eslint": "8.34.1"
-	},
-	"engineStrict": true,
-	"engines": {
-		"node": "^22.17.0",
-		"npm": "11.4.0",
-		"yarn": "1.22.22"
-	}
+  "name": "nvvt-backoffice",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --configuration development",
+    "start:prod": "ng serve --configuration production",
+    "build": "ng build --configuration production",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "lint": "ng lint",
+    "lint:styles": "stylelint \"src/**/*.{scss,css}\" --fix",
+    "prepare": "husky install",
+    "validate:18n": "node scripts/validate-i18n.js"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "overrides": [
+      {
+        "files": "*.html",
+        "options": {
+          "parser": "angular"
+        }
+      }
+    ]
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/cdk": "20.1.6",
+    "@angular/common": "^20.1.0",
+    "@angular/compiler": "^20.1.0",
+    "@angular/core": "^20.1.0",
+    "@angular/forms": "^20.1.0",
+    "@angular/material": "20.1.6",
+    "@angular/platform-browser": "^20.1.0",
+    "@angular/router": "^20.1.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
+  },
+  "devDependencies": {
+    "@angular-eslint/builder": "20.1.1",
+    "@angular/build": "^20.1.6",
+    "@angular/cli": "^20.1.6",
+    "@angular/compiler-cli": "^20.1.0",
+    "@eslint/js": "^9.29.0",
+    "@types/jasmine": "~5.1.0",
+    "angular-eslint": "20.1.1",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "jasmine-core": "~5.8.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2",
+    "stylelint": "^16.23.1",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-scss": "^6.12.1",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "8.34.1"
+  },
+  "engineStrict": true,
+  "engines": {
+    "node": "^22.17.0",
+    "npm": "11.4.0",
+    "yarn": "1.22.22"
+  }
 }
